add Image feature to Article

--- a/modules/articles/client/views/create-article.client.view.html
+++ b/modules/articles/client/views/create-article.client.view.html
@@ -12,6 +12,30 @@
             <p class="help-block error-text" ng-message="required">Article title is required.</p>
           </div>
         </div>
+
+        <div class="form-group" show-errors>
+          <label for="title">Featured Image </label>
+          <button type="button" class="btn btn-secondary" ng-show="uploadedFile == null" type="file"
+            ngf-select="uploadFiles($file, $invalidFiles)"
+            ng-model="uploadedFile" name="file" ngf-model-invalid="errorFiles"
+            accept="image/*" ngf-max-size="1MB">
+            Select Featured Image</button>
+          <div class="text-center">
+            <img ng-show="articleForm.file.$valid" ngf-thumbnail="uploadedFile" class="thumb">
+          </div>
+          <div class="text-center">
+            <div class="progress" ng-show="uploadedFile.progress >= 0">
+                      <div style="width:{{uploadedFile.progress}}%"
+                          ng-bind="uploadedFile.progress + '%'"></div>
+            </div>
+          </div>
+          <div class="text-center">
+            <button type="button" class="btn btn-secondary" ng-click="uploadedFile = null" ng-show="uploadedFile">Remove</button>
+          </div>
+          <div class="alert alert-danger" ng-show="articleForm.file.$error.maxSize">File too large
+                       {{errorFiles[0].size / 1000000|number:1}}MB: max 1M</div>
+        </div>
+
         <div class="form-group">
           <label for="content">Content</label>
           <textarea name="content" ng-model="content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
